# collector

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  plan.md  pyproject.toml  requirements.txt  test_indices.py
data/: get_db.py
searxng/: settings.yml
src/: api.py  config.py  llm_client.py  models.py  notify.py  scraper.py  search.py  storage.py  worker.py
tests/: conftest.py  test_connectivity.py  test_llm_validation.py  test_notify_dedup.py  test_search.py  test_searxng_scrapling.py  test_storage.py  test_worker_flow.py
